tests/NormalTests/paczka1/small_fuzzy/19784241.err
Error in line 1: JNqJF2Bvxz5 S541 21,4
Error in line 3: JNqJF2Bvxz5 S327 91,3
